remove gulp due to it now yet supporting ES Modules

--- a/package.json
+++ b/package.json
@@ -59,10 +59,7 @@
         "tsc:watch": "tsc --project tsconfig.debug.json -w --pretty",
         "tsc:dev": "tsc --project tsconfig.dev.json",
         "coverage": "nyc report --reporter=text-lcov | coveralls",
-        "debug": "export $(cat .env | xargs) && nodemon --watch ./dist --inspect=0.0.0.0:9229 --nolazy ./dist/test.js",
-        "package": "gulp package",
-        "publish": "gulp publish",
-        "audit": "gulp audit"
+        "debug": "export $(cat .env | xargs) && nodemon --watch ./dist --inspect=0.0.0.0:9229 --nolazy ./dist/test.js"
     },
     "dependencies": {
         "@threedfish/array": "^3.1.5",
