--- a/tsconfig.debug.json
+++ b/tsconfig.debug.json
@@ -1,10 +1,12 @@
 {
     "compilerOptions": {
+		"allowSyntheticDefaultImports": true,
         "declaration": true,
         "declarationDir": "dist",
         "outDir": "dist",
-        "target": "ES2016",
-        "module": "commonjs",
+        "target": "ES2021",
+        "module": "ES2022",
+		"moduleResolution": "node16",
         "pretty": false,
         "removeComments": false,
         "inlineSourceMap": true,
